@@ -15,7 +15,7 @@ batou supports downloading files via HTTP(S) or FTP, for example:
 
 .. py:class:: batou.lib.download.Download(url)
 
-    Download from the given URL (uses ``wget`` internally).
+    Download from the given URL (uses ``urllib`` internally).
 
 .. py:attribute:: checksum
 
